# src/main/java/org/siri_hate/main_service/controller/NewsController.java
@@ -1,5 +1,6 @@
 package org.siri_hate.main_service.controller;
 
+import org.jspecify.annotations.Nullable;
 import org.siri_hate.main_service.api.NewsApi;
 import org.siri_hate.main_service.dto.NewsFullResponseDTO;
 import org.siri_hate.main_service.dto.NewsPageResponseDTO;
@@ -8,8 +9,6 @@ import org.siri_hate.main_service.service.NewsService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -24,10 +23,8 @@ public class NewsController implements NewsApi {
     }
 
     @Override
-    public ResponseEntity<NewsFullResponseDTO> createNews(NewsRequestDTO news, MultipartFile logo) {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        String username = authentication.getName();
-        var response = newsService.createNews(username, news, logo);
+    public ResponseEntity<NewsFullResponseDTO> createNews(String xUserName, NewsRequestDTO news, MultipartFile logo) {
+        var response = newsService.createNews(xUserName, news, logo);
         return new ResponseEntity<>(response, HttpStatus.CREATED);
     }
 
@@ -38,10 +35,8 @@ public class NewsController implements NewsApi {
     }
 
     @Override
-    public ResponseEntity<NewsPageResponseDTO> getMyNews(String category, String query, Boolean moderationPassed, Integer page, Integer size) {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        String username = authentication.getName();
-        var response = newsService.getNews(username, query, page, size);
+    public ResponseEntity<NewsPageResponseDTO> getMyNews(String xUserName, @Nullable String category, @Nullable String query, @Nullable Boolean moderationPassed, Integer page, Integer size) {
+        var response = newsService.getNews(xUserName, query, page, size);
         return new ResponseEntity<>(response, HttpStatus.OK);
     }
 
