# src/main/java/org/siri_hate/main_service/controller/ProjectSubscriptionController.java
@@ -5,8 +5,6 @@ import org.siri_hate.main_service.service.ProjectSubscriberService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.*;
 
 @RestController
@@ -20,23 +18,20 @@ public class ProjectSubscriptionController implements ProjectSubscriptionApi {
     }
 
     @Override
-    public ResponseEntity<Boolean> isUserSubscribed(Long projectId) {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        var response = projectSubscriberService.getSubscribeStatus(projectId, authentication.getName());
+    public ResponseEntity<Boolean> isUserSubscribed(Long projectId, String xUserName) {
+        var response = projectSubscriberService.getSubscribeStatus(projectId, xUserName);
         return new ResponseEntity<>(response, HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<Void> subscribeToProject(Long projectId) {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        projectSubscriberService.subscribeToProject(projectId, authentication.getName());
+    public ResponseEntity<Void> subscribeToProject(Long projectId, String xUserName) {
+        projectSubscriberService.subscribeToProject(projectId, xUserName);
         return new ResponseEntity<>(HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<Void> unsubscribeFromProject(Long projectId) {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        projectSubscriberService.unsubscribeFromProject(projectId, authentication.getName());
+    public ResponseEntity<Void> unsubscribeFromProject(Long projectId, String xUserName) {
+        projectSubscriberService.unsubscribeFromProject(projectId,xUserName);
         return new ResponseEntity<>(HttpStatus.OK);
     }
 }
